VisDetails: fix overflow problem

--- a/client/src/css/VisDetails.css
+++ b/client/src/css/VisDetails.css
@@ -2,7 +2,7 @@
     grid-area: 2 / 7 / 6 / 10;
 }
 
-.querydetails {
+.visdetails {
     overflow: auto;
 }
 
